--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Chas Hundley's misc stuff
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://stuff.chashundley.com/
 SHOW_CREATED_TIMESTAMP=false
